Updated env for test env

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,11 @@
-# settings
+# Production settings
 TRIVIA_DB=trivia
 TRIVIA_DB_USR=student_t
 TRIVIA_DB_USR_PWD=student
 TRIVIA_DB_HOST_PORT=localhost:5432
+
+# Test settings
+TRIVIA_TEST_DB=trivia_test
+TRIVIA_DB_TEST_USR=student_t
+TRIVIA_DB_TEST_USR_PWD=student
+TRIVIA_DB_TEST_HOST_PORT=localhost:5432
